--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -31,6 +31,8 @@
         <item name="dashboardGraphReqBarColor">@color/dashboard_graph_bar_req</item>
         <item name="dashboardReqTooltipColor">@color/dashboard_tooltip_req</item>
         <item name="dashboardReqTooltipTextColor">@color/white</item>
+
+        <item name="dashboardGreen">#66BB6A</item>
     </style>
 
 </resources>
