--- a/app/src/main/res/color/filter_item_text_color.xml
+++ b/app/src/main/res/color/filter_item_text_color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/white" android:state_selected="true" />
+    <item android:color="?android:windowBackground" android:state_selected="true" />
 
     <item android:color="?colorControlNormal" android:state_selected="false" />
 
