--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,7 +24,9 @@
     <color name="delete">#FF0000</color>
 
     <color name="dashboard_graph_bar">#64b5f6</color>
-    <color name="dashboard_graph_bar_req">#e57373</color>
+    <color name="dashboard_graph_bar_more_req">#e57373</color>
+    <color name="dashboard_graph_bar_less_req">#4caf50</color>
     <color name="dashboard_tooltip">#bbdefb</color>
-    <color name="dashboard_tooltip_req">#D32F2F</color>
+    <color name="dashboard_tooltip_more_req">#D32F2F</color>
+    <color name="dashboard_tooltip_less_req">#43A047</color>
 </resources>
