--- a/app/src/main/res/menu/fragment_stock.xml
+++ b/app/src/main/res/menu/fragment_stock.xml
@@ -4,6 +4,14 @@
     >
 
     <item
+        android:id="@+id/action_search"
+        android:title="@string/search_title"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        />
+
+    <item
         android:id="@+id/action_undo"
         android:title="@string/action_undo"
         android:icon="@drawable/ic_undo"
