--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -83,37 +83,36 @@
         />
 
     <include
+        android:id="@+id/stock_section_title"
         layout="@layout/item_section_divider"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
 
-    <TextView
-        android:id="@+id/current_stock"
-        style="@style/DetailsText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
-        android:clickable="true"
-        android:drawableEnd="@drawable/ic_expand"
-        android:drawablePadding="16dp"
-        android:paddingStart="24dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="24dp"
-        android:paddingBottom="16dp"
-        android:textColor="?textColorPrimary"
-        tools:text="Current stock: 1456 kg in 3 locations"
-        />
+    <!--<TextView-->
+    <!--android:id="@+id/current_stock"-->
+    <!--style="@style/DetailsText"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="?selectableItemBackground"-->
+    <!--android:clickable="true"-->
+    <!--android:drawableEnd="@drawable/ic_expand"-->
+    <!--android:drawablePadding="16dp"-->
+    <!--android:paddingStart="24dp"-->
+    <!--android:paddingTop="16dp"-->
+    <!--android:paddingEnd="24dp"-->
+    <!--android:paddingBottom="16dp"-->
+    <!--android:textColor="?textColorPrimary"-->
+    <!--tools:text="Current stock: 1456 kg in 3 locations"-->
+    <!--/>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_stock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:overScrollMode="never"
-        android:visibility="gone"
-        tools:itemCount="2"
-        tools:listitem="@layout/item_stock_in_location"
-        tools:visibility="visible"
+        tools:itemCount="1"
+        tools:listitem="@layout/item_current_stock_in_location"
         />
 
 </LinearLayout>
