--- a/app/src/main/res/layout/item_stock_in_location.xml
+++ b/app/src/main/res/layout/item_stock_in_location.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="?android:windowBackground"
+    android:background="?selectableItemBackground"
+    android:clickable="true"
     android:orientation="horizontal"
     android:paddingStart="36dp"
     android:paddingTop="16dp"
-    android:paddingBottom="16dp"
     android:paddingEnd="48dp"
+    android:paddingBottom="16dp"
     >
 
     <TextView
@@ -17,18 +17,18 @@
         style="@style/TextNormal"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:ellipsize="end"
         android:gravity="center_vertical"
+        android:maxLines="1"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         tools:text="UK1535"
-        android:ellipsize="end"
-        android:maxLines="1"
         />
 
     <Space
         android:layout_width="0dp"
-        android:layout_weight="1"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         />
 
     <LinearLayout
@@ -58,5 +58,12 @@
             tools:text="100 boxes"
             />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/stock_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        />
 
 </LinearLayout>
