--- a/app/src/main/res/layout/item_current_stock_in_location.xml
+++ b/app/src/main/res/layout/item_current_stock_in_location.xml
@@ -20,7 +20,7 @@
         android:paddingEnd="24dp"
         android:paddingBottom="16dp"
         android:textColor="?textColorPrimary"
-        tools:text="Current stock: 1456 kg in 3 locations"
+        tools:text="Product: 1456 kg in 3 locations"
         />
 
     <LinearLayout
