--- a/app/src/main/res/layout/activity_edit_contract.xml
+++ b/app/src/main/res/layout/activity_edit_contract.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
@@ -129,13 +130,6 @@
                 tools:itemCount="1"
                 tools:listitem="@layout/item_product_options"
                 />
-
-            <!--<LinearLayout-->
-            <!--android:id="@+id/products_already_added"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical"-->
-            <!--/>-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_destination"
