--- a/app/src/main/res/layout/activity_edit_order.xml
+++ b/app/src/main/res/layout/activity_edit_order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
@@ -130,13 +131,6 @@
                 tools:listitem="@layout/item_product_options"
                 />
 
-            <!--<LinearLayout-->
-            <!--android:id="@+id/products_already_added"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical"-->
-            <!--/>-->
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_destination"
                 style="@style/AppTextInputLayout.Searchable"
@@ -179,14 +173,14 @@
                 >
 
                 <TextView
+                    style="@style/TextNormal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/TextNormal"
-                    android:text="@string/orders_input_completed"
                     android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
                     android:paddingTop="16dp"
+                    android:paddingEnd="16dp"
                     android:paddingBottom="16dp"
+                    android:text="@string/orders_input_completed"
                     />
 
                 <CheckBox
