--- a/app/src/main/res/layout/dialog_add_new_meat_type.xml
+++ b/app/src/main/res/layout/dialog_add_new_meat_type.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dialog_margin_horizontal"
         android:layout_marginTop="@dimen/dialog_margin_vertical"
-        android:layout_marginBottom="@dimen/input_spacing_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
+        android:layout_marginBottom="@dimen/input_spacing_vertical"
         android:hint="@string/stock_product_meat_type_input"
         >
 
