--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="?android:windowBackground"
+    android:orientation="vertical"
     >
 
     <TextView
+        style="?dialogTitleStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/stock_product_new"
-        style="?dialogTitleStyle"
         android:layout_marginStart="@dimen/dialog_margin_horizontal"
         android:layout_marginTop="@dimen/dialog_margin_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
         android:layout_marginBottom="@dimen/input_spacing_vertical"
+        android:text="@string/stock_product_new"
         />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -56,37 +56,6 @@
             android:inputType="textCapWords"
             />
     </com.google.android.material.textfield.TextInputLayout>
-
-    <!--   <LinearLayout
-           android:id="@+id/search_results_layout"
-           style="@style/SearchResultsLayout"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="vertical"
-           android:visibility="gone"
-           >
-
-           <com.martinwalls.nea.ui.components.AddNewTextView
-               android:id="@+id/add_new"
-               style="@style/SearchResultsItemText.Selectable.AddNew"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               />
-
-           <com.martinwalls.nea.ui.components.CustomRecyclerView
-               android:id="@+id/recycler_view_results"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               />
-
-           <TextView
-               android:id="@+id/no_results"
-               style="@style/SearchResultsItemText"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:text="@string/search_no_matches"
-               />
-       </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
