--- a/app/src/main/res/layout/dialog_repeat_interval.xml
+++ b/app/src/main/res/layout/dialog_repeat_interval.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_root"
     android:layout_width="match_parent"
@@ -7,35 +8,6 @@
     android:orientation="vertical"
     tools:context=".ui.contracts.RepeatIntervalDialog"
     >
-
-    <!--<TextView-->
-    <!--style="@style/TextNormal.Bold"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="@string/contracts_dialog_repeat_interval_title"-->
-    <!--/>-->
-
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:orientation="horizontal"-->
-    <!--&gt;-->
-
-    <!--<EditText-->
-    <!--android:id="@+id/edit_text_interval"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:inputType="number"-->
-    <!--android:minEms="2"-->
-    <!--/>-->
-
-    <!--<Spinner-->
-    <!--android:id="@+id/spinner_time_period"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="match_parent"-->
-    <!--/>-->
-
-    <!--</LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/radio_group"
@@ -54,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:text="@string/contracts_dialog_repeat_interval_week"
             />
 
@@ -63,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:text="@string/contracts_dialog_repeat_interval_two_week"
             />
 
@@ -72,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:text="@string/contracts_dialog_repeat_interval_month"
             />
 
@@ -81,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:visibility="gone"
             />
 
@@ -90,6 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:text="@string/contracts_dialog_repeat_interval_custom"
             />
     </LinearLayout>
@@ -104,6 +81,7 @@
         android:layout_marginBottom="@dimen/dialog_margin_vertical"
         android:orientation="vertical"
         android:visibility="gone"
+        tools:visibility="visible"
         >
 
         <TextView
