--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,11 +10,11 @@
 
     <TextView
         android:id="@+id/product_name"
+        style="@style/ItemInfoPrimary"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center_vertical|start"
-        style="@style/ItemInfoPrimary"
         tools:text="Product"
         />
 
@@ -25,21 +26,21 @@
 
         <TextView
             android:id="@+id/mass"
+            style="@style/ItemAmountPrimary"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            style="@style/ItemAmountPrimary"
             tools:text="1900.00 kg"
             />
 
         <TextView
             android:id="@+id/num_boxes"
+            style="@style/ItemAmountSecondary"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical|end"
-            style="@style/ItemAmountSecondary"
             tools:text="100 boxes"
             />
     </LinearLayout>
