--- a/app/src/main/res/layout/item_stock.xml
+++ b/app/src/main/res/layout/item_stock.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/stock_item_layout"
     android:layout_width="match_parent"
@@ -35,11 +36,11 @@
             android:layout_height="match_parent"
             android:layout_alignBaseline="@id/name"
             android:layout_toEndOf="@id/name"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             tools:text="UK1535"
-            android:ellipsize="end"
-            android:maxLines="1"
             />
 
     </RelativeLayout>
