--- a/app/src/main/res/layout/nav_drawer_content.xml
+++ b/app/src/main/res/layout/nav_drawer_content.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:divider="@drawable/divider_thin"
+    android:orientation="vertical"
     android:showDividers="middle"
     >
 
@@ -12,15 +12,15 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="108dp"
+        android:gravity="bottom"
         android:paddingStart="40dp"
         android:paddingTop="24dp"
         android:paddingEnd="24dp"
         android:paddingBottom="24dp"
         android:text="@string/app_name"
+        android:textColor="?textColorSecondary"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:gravity="bottom"
-        android:textColor="?textColorSecondary"
         />
 
 
