--- a/app/src/main/res/drawable/divider_thick.xml
+++ b/app/src/main/res/drawable/divider_thick.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
 
     <size android:height="3px" />
 
-    <solid
-        android:color="?attr/dividerColor"
-        />
+    <solid android:color="?dividerColor" />
 
 </shape>
