--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,5 +1,6 @@
-<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.preference.PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <PreferenceCategory app:title="@string/settings_category_general">
@@ -22,11 +23,6 @@
             app:useSimpleSummaryProvider="true"
             />
 
-        <!--<SwitchPreferenceCompat-->
-            <!--app:key="@string/pref_dark_theme"-->
-            <!--app:title="@string/settings_dark_theme"-->
-            <!--/>-->
-
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/settings_category_notifications">
@@ -42,21 +38,5 @@
             />
 
     </PreferenceCategory>
-
-    <!--
-    <PreferenceCategory app:title="@string/settings_category_backup">
-
-        <Preference
-            app:key="@string/pref_backup_db"
-            app:title="@string/settings_backup_db"
-            />
-
-        <Preference
-            app:key="@string/pref_restore_db"
-            app:title="@string/settings_restore_db"
-            />
-
-    </PreferenceCategory>
-    -->
 
 </androidx.preference.PreferenceScreen>
