--- a/app/src/main/res/layout/dialog_repeat_interval.xml
+++ b/app/src/main/res/layout/dialog_repeat_interval.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -94,13 +95,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
             android:orientation="horizontal"
             >
 
-            <!-- todo + and - buttons -->
+            <ImageButton
+                android:id="@+id/btn_minus"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:background="?selectableItemBackgroundBorderless"
+                android:padding="4dp"
+                app:srcCompat="@drawable/ic_minus"
+                />
+
             <EditText
                 android:id="@+id/edit_text_number"
                 android:layout_width="wrap_content"
@@ -109,7 +117,19 @@
                 android:inputType="number"
                 android:maxLength="2"
                 android:minEms="2"
-                android:text="1"
+                android:text="@string/contracts_dialog_repeat_interval_custom_value_default"
+                android:importantForAutofill="no"
+                tools:ignore="LabelFor"
+                />
+
+            <ImageButton
+                android:id="@+id/btn_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="4dp"
+                android:background="?selectableItemBackgroundBorderless"
+                android:padding="4dp"
+                app:srcCompat="@drawable/ic_add"
                 />
 
             <Spinner
