--- a/app/src/main/res/layout/item_stock_in_location.xml
+++ b/app/src/main/res/layout/item_stock_in_location.xml
@@ -7,11 +7,16 @@
     android:background="?selectableItemBackground"
     android:clickable="true"
     android:orientation="horizontal"
-    android:paddingStart="36dp"
-    android:paddingTop="16dp"
+    android:paddingStart="24dp"
     android:paddingEnd="48dp"
-    android:paddingBottom="16dp"
     >
+
+    <View
+        android:layout_width="1.5dp"
+        android:layout_height="match_parent"
+        android:background="@color/medium_light_grey"
+        />
+<!--    todo theme attr for color -->
 
     <TextView
         android:id="@+id/location"
@@ -21,7 +26,7 @@
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
-        android:paddingStart="8dp"
+        android:paddingStart="20dp"
         android:paddingEnd="8dp"
         tools:text="UK1535"
         />
@@ -37,6 +42,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         >
 
         <TextView
