--- a/app/src/main/res/layout/dialog_add_new_meat_type.xml
+++ b/app/src/main/res/layout/dialog_add_new_meat_type.xml
@@ -36,7 +36,7 @@
 
         <Button
             android:id="@+id/btn_cancel"
-            style="?attr/borderlessButtonStyle"
+            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -45,7 +45,7 @@
 
         <Button
             android:id="@+id/btn_done"
-            style="?attr/borderlessButtonStyle"
+            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
