--- a/app/src/main/res/layout/dialog_confirm_delete.xml
+++ b/app/src/main/res/layout/dialog_confirm_delete.xml
@@ -35,7 +35,7 @@
 
         <Button
             android:id="@+id/btn_cancel"
-            style="?attr/borderlessButtonStyle"
+            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/action_cancel"
@@ -43,7 +43,7 @@
 
         <Button
             android:id="@+id/btn_delete"
-            style="?attr/borderlessButtonStyle"
+            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/action_delete"
