--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -67,7 +67,7 @@
 
         <Button
             android:id="@+id/btn_cancel"
-            style="?attr/borderlessButtonStyle"
+            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/action_cancel"
@@ -81,7 +81,7 @@
 
         <Button
             android:id="@+id/btn_done"
-            style="?attr/borderlessButtonStyle"
+            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/action_done"
