--- a/app/src/main/res/layout/dialog_confirm_cancel.xml
+++ b/app/src/main/res/layout/dialog_confirm_cancel.xml
@@ -35,7 +35,7 @@
 
         <Button
             android:id="@+id/btn_no"
-            style="?attr/borderlessButtonStyle"
+            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/action_no"
@@ -43,7 +43,7 @@
 
         <Button
             android:id="@+id/btn_yes"
-            style="?attr/borderlessButtonStyle"
+            style="?borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/action_yes"
