--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -21,6 +21,8 @@
         <!-- List divider color -->
         <item name="dividerColor">@color/medium_dark_grey</item>
 
+        <item name="itemHighlight">@color/dark_grey</item>
+
         <!-- Dashboard graph -->
         <item name="dashboardGraphAmountBarColor">@color/dashboard_graph_bar</item>
         <item name="dashboardAmountTooltipColor">@color/dashboard_tooltip</item>
