--- a/app/src/main/res/layout/activity_edit_location.xml
+++ b/app/src/main/res/layout/activity_edit_location.xml
@@ -169,6 +169,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/input_spacing_vertical"
+            android:layout_marginBottom="48dp"
             android:hint="@string/locations_input_phone"
             >
 
