--- a/app/src/main/res/drawable/tutorial_btn_primary_selected.xml
+++ b/app/src/main/res/drawable/tutorial_btn_primary_selected.xml
@@ -5,7 +5,7 @@
 
     <item>
         <shape>
-            <solid android:color="#afff" />
+            <solid android:color="#8fff" />
 
             <stroke
                 android:width="3dp"
