--- a/app/src/main/res/layout/fragment_tutorial_mass_unit.xml
+++ b/app/src/main/res/layout/fragment_tutorial_mass_unit.xml
@@ -7,13 +7,62 @@
     >
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Mass unit"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/themes_layout"
+        android:layout_marginBottom="64dp"
+        android:gravity="center_horizontal|bottom"
+        android:text="Choose mass unit"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         />
+
+    <LinearLayout
+        android:id="@+id/themes_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/kgs"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="64dp"
+            android:layout_marginEnd="32dp"
+            android:layout_weight="1"
+            android:background="@drawable/tutorial_btn_primary"
+            android:clickable="true"
+            android:gravity="center"
+            android:paddingTop="64dp"
+            android:paddingBottom="64dp"
+            android:textColor="@color/white"
+            android:text="Kilograms\n(kg)"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/lbs"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="64dp"
+            android:layout_weight="1"
+            android:background="@drawable/tutorial_btn_primary"
+            android:clickable="true"
+            android:gravity="center"
+            android:paddingTop="64dp"
+            android:paddingBottom="64dp"
+            android:text="Pounds\n(lbs)"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
