--- a/app/src/main/res/layout/fragment_tutorial_meat_types.xml
+++ b/app/src/main/res/layout/fragment_tutorial_meat_types.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_blue"
+    android:background="?colorPrimaryDark"
     >
 
     <TextView
@@ -31,105 +32,41 @@
         >
 
         <TextView
+            android:id="@+id/title_suggested"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Suggested:"
-            android:textColor="?textColorSecondary"
+            android:textColor="#7fff"
             android:textSize="14sp"
             />
 
-        <LinearLayout
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_meat_types"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            >
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Beef"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            >
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Pork"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            >
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Lamb"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
-            >
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Chicken"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-        </LinearLayout>
+            android:layout_marginTop="4dp"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_tutorial_meat_type"
+            />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_custom_meat_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/tutorial_btn_secondary"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:clickable="true"
+        android:text="Add a custom meat type"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        /> <!-- bottom bar is 56 dp in activity layout -->
 
 </RelativeLayout>
